Add colonies, food, locations and assets.

--- a/db/keywords.jsonc
+++ b/db/keywords.jsonc
@@ -13,5 +13,12 @@
     "civilization",
     "harsh weather",
     "survive",
-    "unforgiving cold"
+    "unforgiving cold",
+    "post-earth",
+    "dystopia",
+    "frostpunk",
+    "harsh winter",
+    "reduced resources",
+    "sever winter",
+    "difficult survival"
 ]
