--- a/db/keywords.jsonc
+++ b/db/keywords.jsonc
@@ -14,6 +14,15 @@
     "harsh weather",
     "survive",
     "unforgiving cold",
+    "glacial",
+    "frost",
+    "ice",
+    "arctic",
+    "snow",
+    "winter",
+    "frozen",
+    "chilly",
+    "sub-zero",
     "post-earth",
     "dystopia",
     "frostpunk",
